Archive2/6d/7f9a410790e7e3/output
main.cpp:24:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
1 error generated.
